--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,13 @@ typings/
 # dotenv environment variables file
 .env
 
+# Local development
+*.env
+*.dev
+.DS_Store
+
+# Docker
+Dockerfile
+docker-compose.yml
+
+
